--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">test</string>
-    <string name="hello_world">hello</string>
+    <string name="hello_world">hello Android</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
 
